2007-11-05  Stefan Harmeling  <harmeling@gmail.com>

	* rha_config.pl: Note that the _rha_ is now ignored.  All
	functions of a header listed in rha_config.d will be loaded.
	Functions that should not be loaded can be excluded by the keyword
	_ignore_. 

	Note that the types appearing in functions that are embedded are
	automatically introduced to rhabarber.  The types listed in
	rha_config.d are only there for convenient inclusion in
	rhabarber's sources.

	* object.h: removed some unused functions.

	* symbol_fn.h: commented out three wraping functions, which were
	not find at linking time.  Did anybody use them?

	* python_fn.h: non-rhabarber stuff written in C that is included
	at compile time doesn't need to use special rhabarber types.  Just
	use the usual types, like PyObject * and rha_config.pl will
	automatically create the necessary types, which will appear in
	'root.types'.

	Note that to check ptypes you need to find out how your type
	translates to the macroconstant.  For PyObject * this becomes:

	  _PYOBJECT_PTR

	Maybe we should also allow lower case letter, to avoid possible
	conflicts.
	

2007-11-02  Stefan Harmeling  <harmeling@gmail.com>

	* ALLOVERTHEPLACE: naming scheme for types has changed, since now
	types are automatically included from all modules.  Don't use
	'int_t' and 'bool_t' anymore, use instead 'int' and 'bool'.  All
	types that we declare additionally in C end with '_t' as before.
	The macro-constants do now start with '_', the rest is exactly the
	name of the type, e.g. '_INT', '_TUPLE_T'.

	   in C                           in rhabarber
	   typename   macroconstant       typename
	     int        _INT                 int
	     bool       _BOOL                bool
	     real_t     _REAL_T              real_t
	     string_t   _STRING_T            string_t
	     tuple_t    _TUPLE_T             tuple_t

	Note that 'real_t' and 'string_t' gets renamed in 'prelude.rha'...
